[package]
name = "process_uptime"
version = "0.1.2"
authors = ["irexiz <zagan.ireneusz@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["pid", "uptime", "process_uptime", "application_uptime"]
description = "Quick and simple way of fetching an application's uptime by pid"
repository = "https://github.com/irexiz/process_uptime"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

